myapp-servcie-canary.yaml
# create a deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-canary-deployment
  namespace: myapp-ns
  labels:
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-canary-pod
      version: canary
  template:
    metadata:
      namespace: myapp-ns
      labels:
        app: myapp-canary-pod
        version: canary
    spec:
      serviceAccountName: myapp-serviceaccount
      containers:
      - name: myapp-canary-pod
        image: registry.cn-hangzhou.aliyuncs.com/ymmirror/e2e-test-echo:v1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "250m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "128Mi"
---
# create a service
apiVersion: v1
kind: Service
metadata:
  name: myapp-canary-service
  namespace: myapp-ns
  labels:
    app: myapp-canary-service
    version: canary
spec:
  selector:
    app: myapp-canary-pod
    version: canary
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
