service-nginx01.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zt-nginx-deployment
  labels:
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zt-nginx-pod
      version: v1
  template:
    metadata:
      labels:
        app: zt-nginx-pod
        version: v1
    spec:
      serviceAccountName: zt-nginx-svc-account
      # sidecar
      # initContainers:
      #   - name: logshipper
      #     image: m.daocloud.io/docker.io/alpine:latest
      #     restartPolicy: Always
      #     #command: ['sh', '-c', 'tail /opt/logs.txt']
      #     volumeMounts:
      #       - name: data
      #         mountPath: /opt
      # main
      containers:
      - image: nginx:1.10 # Edit this for your reponame
        #imagePullPolicy: Never
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        name: zt-nginx-pod
        #restartPolicy: Never
        ports:
        - containerPort: 80
        - name: liveness-port
          containerPort: 80
        #
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        #
        livenessProbe:
          httpGet:
            path: /
            port: liveness-port
            httpHeaders:
            - name: Custom-Header
              value: Awesome
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: liveness-port
            httpHeaders:
            - name: Custom-Header
              value: Awesome
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 10
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 1
          periodSeconds: 10
      #  
      volumes:
      - name: data
        emptyDir: {}
      - name: html-volume
        # Use either ConfigMap or PersistentVolume
        configMap:
          name: zt-nginx-configmap
          items:
          - key: index.html
            path: index.html
            # persistentVolumeClaim:
            #   claimName: html-pvc
      - name: nginx-config
        configMap:
          name: zt-nginx-configmap
          items:
          - key: zt.conf
            path: default.conf
      - name: access-token
        projected:
          sources:
          # 要为某 Pod 提供一个受众为 vault 并且有效期限为 2 小时的令牌 ??
          - serviceAccountToken:
              path: access-token
              expirationSeconds: 600
              audience: vault
      - name: config
        configMap:
          # 提供你想要挂载的 ConfigMap 的名字
          name: zt-nginx-configmap
          # 来自 ConfigMap 的一组键，将被创建为文件
          items:
          - key: "game.properties"
            path: "game.properties"
          - key: "user-interface.properties"
            path: "user-interface.properties"

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: zt-nginx-svc
    version: v1
  name: zt-nginx-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: zt-nginx-pod
  type: ClusterIP
