ingress.yaml
#
# https://github.com/kubernetes/ingress-nginx/blob/main/docs/examples/rewrite/README.md
# https://github.com/kubernetes/ingress-nginx/blob/main/docs/user-guide/nginx-configuration/annotations.md
# https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#canary
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: zt-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: zt.localdev.me
    http:
      paths:
      - path: /v1(\/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: zt-nginx-svc
            port:
              number: 80
      - path: /v2(\/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: zt-nginx-svc
            port:
              number: 80
